Fixed Vertical scrolling on mobile devices
  body {
        background-color: var(--off-white);
        max-width: 100vw;
        overflow-x: hidden;
    }

--- a/styles/main.css
+++ b/styles/main.css
@@ -10,6 +10,8 @@
    html, body {
     height: 100%;
     font-size: 100%;
+    width: 100%;
+    /* overflow-x: hidden; */
    }
 
    h1,
@@ -97,11 +99,16 @@
 
     /* Mobile styles are set to default, to overwrite use desktop media query  */
 
-    body {
-        background-color: var(--off-white);
-    }
+   
 
     /*/////////////// HEADER //////////////*/
+
+    body {
+        background-color: var(--off-white);
+        max-width: 100vw;
+        overflow-x: hidden;
+    }
+
     header {
         background-color: var(--rene-blue);
         display: flex;
@@ -160,9 +167,7 @@
         padding-bottom: 10px;
     }
 
-    body {
-        background-color: var(--off-white);
-    }
+   
 
     
 
