--- a/styles/mobile-nav.css
+++ b/styles/mobile-nav.css
@@ -11,7 +11,7 @@
             height: 50px;
             width: 50px;
             top: 10px;
-            right: 20px;
+            right: 26px;
             z-index: 302;
             opacity: 0 !important;
             cursor: pointer;
@@ -24,7 +24,7 @@
             width: 32px;
             position: absolute;
             top: 17px;
-            right: 20px;
+            right: 26px;
             z-index: 301 !important;
             display: flex;
             flex-direction: column;
